--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -281,7 +281,7 @@ Any labels set by the application via the agent's public API will override globa
 | <empty map> | Map of string to string
 |============
 
-NOTE: This option requires APM Server 7.2 or later, and it will have no effect if an older version is used.
+NOTE: This option requires APM Server 7.2 or later. It will have no effect on older versions.
 
 [[config-reporter]]
 === Reporter configuration options
