--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -349,7 +349,7 @@ WARNING: Avoid defining too many user-specified labels.
 Defining too many unique fields in an index is a condition that can lead to a
 {ref}/mapping.html#mapping-limit-settings[mapping explosion].
 
-Dots (`.`) in the keys are not allowed. In case you have a `.` in your label key, it will be replaced by `_`. For example `foo.bar` will be stored as `foo_bar`.
+Dots (`.`) in the keys are not allowed. In case you have a `.` in your label key, it will be replaced by `_`. For example `a.b` will be stored as `a_b`.
 
 [source,csharp]
 ----
