--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -198,14 +198,14 @@ finally
 ==== `Dictionary<string,string> Labels`
 A flat mapping of user-defined labels with string values. 
 
+If the key contains any special characters (`.`,`*`, `"`), they will be replaced with underscores. For example `a.b` will be stored as `a_b`.
+
 TIP: Before using custom labels, ensure you understand the different types of
 {apm-overview-ref-v}/metadata.html[metadata] that are available.
 
 WARNING: Avoid defining too many user-specified labels.
 Defining too many unique fields in an index is a condition that can lead to a
 {ref}/mapping.html#mapping-limit-settings[mapping explosion].
-
-Dots (`.`) in the keys are not allowed. In case you have a `.` in your label key, it will be replaced by `_`. For example `foo.bar` will be stored as `foo_bar`.
 
 [source,csharp]
 ----
@@ -342,14 +342,14 @@ and the type will hold information about the database type.
 ==== `Dictionary<string,string> Labels`
 Similar to <<api-transaction-tags>> on the <<api-transaction>>: A flat mapping of user-defined labels with string values.
 
+If the key contains any special characters (`.`,`*`, `"`), they will be replaced with underscores. For example `a.b` will be stored as `a_b`.
+
 TIP: Before using custom labels, ensure you understand the different types of
 {apm-overview-ref-v}/metadata.html[metadata] that are available.
 
 WARNING: Avoid defining too many user-specified labels.
 Defining too many unique fields in an index is a condition that can lead to a
 {ref}/mapping.html#mapping-limit-settings[mapping explosion].
-
-Dots (`.`) in the keys are not allowed. In case you have a `.` in your label key, it will be replaced by `_`. For example `a.b` will be stored as `a_b`.
 
 [source,csharp]
 ----
