--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -149,6 +149,27 @@ NOTE: The service name must conform to this regular expression: `^[a-zA-Z0-9 _-]
 |============
 
 [float]
+[[config-service-node-name]]
+==== `ServiceNodeName` (added[1.2])
+
+If set, this name is used to distinguish between different nodes of a service.
+If not set, data aggregations will be done based on a container ID (where valid) or on the reported hostname (automatically discovered).
+
+NOTE: Metrics views can utilize this configuration since APM Server 7.5
+
+[options="header"]
+|============
+| Environment variable name       | IConfiguration or Web.config key 
+| `ELASTIC_APM_SERVICE_NODE_NAME` | None
+|============
+
+[options="header"]
+|============
+| Default        | Type
+| `<none>`       | String 
+|============
+
+[float]
 [[config-service-version]]
 ==== `ServiceVersion`
 
@@ -648,6 +669,7 @@ Valid options: `Critical`, `Error`, `Warning`, `Info`, `Debug`, `Trace` and `Non
 | <<config-secret-token,`SecretToken`>> | No | Reporter
 | <<config-server-urls,`ServerUrls`>> | No | Reporter
 | <<config-service-name,`ServiceName`>> | No | Core
+| <<config-service-node-name, `ServiceNodeName`>> | No | Core
 | <<config-service-version,`ServiceVersion`>> | No | Core
 | <<config-span-frames-min-duration,`SpanFramesMinDuration`>> | No | Stacktrace, Performance
 | <<config-stack-trace-limit,`StackTraceLimit`>> | No | Stacktrace, Performance
