--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -155,7 +155,7 @@ NOTE: The service name must conform to this regular expression: `^[a-zA-Z0-9 _-]
 If set, this name is used to distinguish between different nodes of a service.
 If not set, data aggregations will be done based on a container ID (where valid) or on the reported hostname (automatically discovered).
 
-NOTE: Metrics views can utilize this configuration since APM Server 7.5
+NOTE: This feature requires APM Server versions >= 7.5
 
 [options="header"]
 |============
