--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -152,7 +152,7 @@ NOTE: The service name must conform to this regular expression: `^[a-zA-Z0-9 _-]
 [[config-service-node-name]]
 ==== `ServiceNodeName` (added[1.2])
 
-If set, this name is used to distinguish between different nodes of a service.
+Optional name used to differentiate between nodes in a service.
 If not set, data aggregations will be done based on a container ID (where valid) or on the reported hostname (automatically discovered).
 
 NOTE: This feature requires APM Server versions >= 7.5
