--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -160,7 +160,7 @@ NOTE: This feature requires APM Server versions >= 7.5
 [options="header"]
 |============
 | Environment variable name       | IConfiguration or Web.config key 
-| `ELASTIC_APM_SERVICE_NODE_NAME` | None
+| `ELASTIC_APM_SERVICE_NODE_NAME` | `ElasticApm:ServiceNodeName`
 |============
 
 [options="header"]
