--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -56,7 +56,7 @@ public class Startup
 }
 ----
 
-NOTE: Make sure the `app.UseAllElasticApm(...)` line is the first line in the `Configure` method, otherwise the agent won't be able to properly measure the timing of your requests and potentially complete requests may be missed by the agent. 
+The `app.UseAllElasticApm(...)` line must be the first line in the `Configure` method, otherwise the agent won't be able to properly measure the timing of your requests, and potentially complete requests may be missed by the agent. 
 
 With this you enable every agent component including ASP.NET Core tracing, monitoring of outgoing HTTP request, Entity Framework Core database tracing, etc.
 
