Added namespace import directive

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -16,6 +16,8 @@ The `UseElasticApm()` extension method offers an overload to pass an `IConfigura
 
 [source,csharp]
 ----
+using Elastic.Apm.AspNetCore;
+
 public class Startup
 {
     public Startup(IConfiguration configuration)
