Added namespace import directive
(cherry picked from commit 9d28305dc0af9ce7bb0bdbcfbc1d9fffbd7941d9)

--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -45,6 +45,8 @@ For ASP.NET Core, once you referenced the `Elastic.Apm.NetCoreAll` package, you 
 
 [source,csharp]
 ----
+using Elastic.Apm.NetCoreAll;
+
 public class Startup
 {
   public void Configure(IApplicationBuilder app, IHostingEnvironment env)
