--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -71,7 +71,7 @@ For example:
 [source,csharp]
 ----
 app.UseElasticApm(Configuration,
-	new HttpDiagnosticsSubscriber(),  /* Enable tracing of outgoing HTTP requests */,
+	new HttpDiagnosticsSubscriber(),  /* Enable tracing of outgoing HTTP requests */
 	new EfCoreDiagnosticsSubscriber() /* Enable tracing of database calls through EF Core*/)
 ----
 
