--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -119,6 +119,7 @@ Below is a sample `Web.config` configuration file for a ASP.NET application.
     <appSettings>
         <!-- ... -->
         <add key="ElasticApm:ServerUrls" value="https://my-apm-server:8200" />
+        <add key="ElasticApm:SecretToken" value="apm-server-secret-token" />
         <!-- ... -->
     </appSettings>
     <!-- ... -->
