--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -598,6 +598,28 @@ the agent will capture request and response headers, including cookies.
 
 NOTE: Setting this to `false` reduces memory allocations, network bandwidth and disk space used by Elasticsearch.
 
+[float]
+[[config-use-elastic-apm-traceparent-header]]
+==== `UseElasticTraceparentHeader` (added[1.3.0])
+
+[options="header"]
+|============
+| Environment variable name                    | IConfiguration or Web.config key
+| `ELASTIC_APM_USE_ELASTIC_TRACEPARENT_HEADER` | `ElasticApm:UseElasticTraceparentHeder`
+|============
+
+[options="header"]
+|============
+| Default                 | Type
+| `true`                  | Boolean
+|============
+
+
+To enable {apm-overview-ref-v}/distributed-tracing.html[distributed tracing], the agent adds trace context headers to outgoing HTTP requests made with the `HttpClient` type. These headers (`traceparent` and `tracestate`) are defined in the https://www.w3.org/TR/trace-context-1/[W3C Trace Context] specification.
+
+When this setting is `true`, the agent will also add the header `elasticapm-traceparent` for backwards compatibility with older versions of Elastic APM agents. Versions prior to `1.3.0` only read the `elasticapm-traceparent` header.
+
+
 [[config-stacktrace]]
 === Stacktrace configuration options
 [float]
