--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -21,6 +21,23 @@ endif::[]
 [[release-notes-1.x]]
 === .NET Agent version 1.x
 
+[[release-notes-1.3.0]]
+==== 1.3.0
+
+[float]
+===== Features
+- New GC metrics: `clr.gc.count`, `clr.gc.gen[X]size`, where [X]: heap generation {pull}697[#697]
+- Capturing SOAP action name as part of the transaction name {pull}683[#683]
+- New config options: `ServiceNodeName`, `VerifyServerCert`, `DisableMetrics`, `UseElasticTraceparentHeader` (https://www.elastic.co/guide/en/apm/agent/dotnet/current/config-all-options-summary.html[docs])
+- Full https://www.w3.org/TR/trace-context[W3C TraceContext] support {pull}717[#717]
+
+
+[float]
+===== Bug fixes
+- Fix transaction name generation in ASP.NET Core 3.x {pull}647[#647]
+- Fix around HTTP request body sanitization {pull}712[#712]
+
+
 [[release-notes-1.2.0]]
 ==== 1.2.0
 
