--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -22,6 +22,15 @@ endif::[]
 === .NET Agent version 1.x
 
 [[release-notes-1.3.0]]
+==== 1.3.1
+
+[float]
+===== Bug fixes
+- Fix log spamming issues  {pull}736[#736], {pull}738[#738]
+- Fix turning HTTP 415 responses in ASP.NET Core to HTTP 500 when request body capturing is active {pull}739[#739]
+- Fix disabling GC metrics collection in case no GC is triggered during the first "5*MetricsInterval" of the process {pull}745[#745]
+
+[[release-notes-1.3.0]]
 ==== 1.3.0
 
 [float]
