--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -21,6 +21,24 @@ endif::[]
 [[release-notes-1.x]]
 === .NET Agent version 1.x
 
+[[release-notes-1.4.0]]
+==== 1.4.0
+
+[float]
+===== Features
+- Introducing `ITransaction.EnsureParentId()` to integrate with RUM in dynamically loaded HTML pages (including page loads in ASP.NET Core) {pull}771[#771]
+- New config setting: `ApiKey` {pull}733[#733]
+
+[float]
+===== Bug fixes
+- Memory issue in .NET Full Framework with default metrics turned on {pull}750[#750]
+- Parsing for Oracle connection strings {pull}749[#749]
+- `StackOverflowException` when using the `Elastic.Apm.SerilogEnricher` package and the log level is set to `Verbose` {pull}753[#753]
+
+[Float]
+===== Breaking changes
+- We have some changes that are technically breaking changes. We made some helper classes internal that were never meant to be public. These are: `Elastic.Apm.Helpers.AgentTimeInstant`,  `Elastic.Apm.Helpers.ContractExtensions`,  `Elastic.Apm.Helpers.ObjectExtensions`, `Elastic.Apm.Helpers.ToStringBuilder`. None of these classes were documented or mentioned as part of the Public Agent API.
+
 [[release-notes-1.3.1]]
 ==== 1.3.1
 
