--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -157,7 +157,7 @@ For example, if you add `Ef6Interceptor` interceptor twice, you'll see two spans
 ==== SqlClient
 
 You can enable auto instrumentation for `System.Data.SqlClient` or `Microsoft.Data.SqlClient` by referencing `Elastic.Apm.SqlClient` package
-and passing `SqlClientDiagnosticSubscriber` to the `UseElasticApm` method in case of ASP.Net Core as it shown in example:
+and passing `SqlClientDiagnosticSubscriber` to the `UseElasticApm` method in case of ASP.NET Core as it shown in example:
 
 [source,csharp]
 ----
@@ -173,13 +173,13 @@ public override void Init()
 {
     // you need add custom code to be sure that Subscribe called only once and in a thread-safe manner
 
-    Agenct.Subscribe(new SqlClientDiagnosticSubscriber());  /* Enable tracing of outgoing db requests */
+    Agent.Subscribe(new SqlClientDiagnosticSubscriber());  /* Enable tracing of outgoing db requests */
 }
 
 ----
 
-NOTE: Auto intsrumentation for `System.Data.SqlClient` is available for both, .Net Core and .Net Framework applications, however, support of .Net Framework has one limitation:
-command text cannot be captured. In case of auto instrumentation for `Microsoft.Data.SqlClient`, only .Net Core is supported, at the moment.
+NOTE: Auto instrumentation  for `System.Data.SqlClient` is available for both, .NET Core and .NET Framework applications, however, support of .NET Framework has one limitation:
+command text cannot be captured. In case of auto instrumentation for `Microsoft.Data.SqlClient`, only .NET Core is supported, at the moment.
 
 [float]
 [[setup-general]]
